add Dockerfile backend; docker-compose and nginx.conf modified

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3.3'
 services:
+  db:
+    image: postgres:12.4
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+      - ./data:/test_data
+    env_file:
+      - ../.env
+  backend:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+    restart: always
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+    depends_on:
+      - db
+    env_file:
+      - ../.env
 
   frontend:
     build:
@@ -7,6 +26,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
   nginx:
     image: nginx:1.19.3
     ports:
@@ -17,3 +38,13 @@ services:
       - ../docs:/usr/share/nginx/html/api/docs
       # - ../docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       # - ../docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+    depends_on:
+      - backend
+      - frontend
+
+volumes:
+  postgres_data:
+  static_value:
+  media_value:
