--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,10 +3,16 @@ server {
     server_name 127.0.0.1;
 
     location /media/ {
+        root /var/html/;
         autoindex on;
 
     }
-    location /static/admin/ {
+    location /static/admin {
+        root /var/html/;
+        autoindex on;
+
+    }
+    location /static/colorfield {
         root /var/html/;
         autoindex on;
 
