add ingredient filter; fix favorite and shopping cart

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
+      - ../backend:/code
     depends_on:
       - db
     env_file:
