--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,12 +6,10 @@ services:
       - postgres_data:/var/lib/postgresql/data/
       - ../data:/test_data
     env_file:
-      - ../.env
+      - .env
 
   backend:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: vuictorovna/foodgram:v.1
     restart: always
     volumes:
       - static_value:/code/static/
@@ -19,14 +17,12 @@ services:
     depends_on:
       - db
     env_file:
-      - ../.env
+      - .env
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: vuictorovna/foodgram-frontend:v.1
     volumes:
-      - ../frontend/:/app/result_build/
+      - frontend_value:/app/result_build/build
     depends_on:
       - backend
 
@@ -36,8 +32,8 @@ services:
       - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ../frontend/build:/usr/share/nginx/html/
-      - ../docs:/usr/share/nginx/html/api/docs
+      - frontend_value:/usr/share/nginx/html/
+      # - ../docs:/usr/share/nginx/html/api/docs
       - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
@@ -48,3 +44,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
+  frontend_value:
