notification for negative ingredient amount fixed

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,4 +4,5 @@ WORKDIR /code
 COPY requirements.txt /code
 RUN pip install -r /code/requirements.txt
 COPY . /code
+RUN python3 manage.py collectstatic
 CMD gunicorn backend.wsgi:application --bind 0.0.0.0:8000
